<resources>
    <string name="app_name">StoryApp</string>
    <string name="welcome">Welcome Back!</string>
    <string name="sign_in_text">Sign in now to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create an Account!</string>
    <string name="fill_the_column">Please fill the column below</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="password_error">At least 8 character!</string>
    <string name="email_error">Not a valid email!</string>
    <string name="create_password">Create password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="image_login">Image Login</string>
    <string name="image_register">Image Register</string>
    <string name="create_email">Create email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="story_photo">Story Photo</string>
    <string name="icon_person">Icon Person</string>
    <string name="description">Description</string>
    <string name="button_add_story">Button add story</string>
    <string name="image_story_photo">Image story photo</string>
    <string name="add_description">Add description</string>
    <string name="image_not_found">Image not found</string>
    <string name="menu_logout">Menu Logout</string>
    <string name="menu_language">Menu Language</string>
    <string name="main_title">Hello, %1$s!</string>
    <string name="logo_app">Logo App</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="image_welcome">Image Welcome</string>
    <string name="share_is_fun">Share is Fun!</string>
    <string name="share_your_activities">Share your activities with us!</string>
    <string name="get_started">Get started!</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_maps">Menu Maps</string>
    <string name="share_your_location">Do you want to share your location?</string>
</resources>